# RustyCraft

./: .gitignore  Cargo.toml  README.md
docs/: index.md
rsc/image/atlas/: blocks.xcf  test.xcf
rsc/shader/: shader.fs  shader.vs
src/: block.rs  block_texture.rs  buffer_builder.rs  camera.rs  camera_computer.rs  chunk.rs  game_config.rs  image_manager.rs  main.rs  mymath.rs  player.rs  shader.rs  vertex.rs  world.rs
src/components/: acceleration.rs  angle2.rs  collider.rs  force.rs  input.rs  mod.rs  onground.rs  position.rs  velocity.rs
src/ecs_resources/: mod.rs
src/systems/: mod.rs
src/texture/: block_texture.rs  mod.rs
