[package]
name = "clone"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[dependencies]
sdl2 = "0.34.5"
gl = {path = "lib/gl"}
nalgebra = "0.29.0"
nalgebra-glm = "0.15.0"
parry3d = "0.7.0"
c_str_macro = "1.0.3"
imgui = "0.7.0"
imgui-sdl2 = "0.14.0"
imgui-opengl-renderer = "0.11.0"
image = "0.23.14"
specs = { version = "0.17.0", features = ["specs-derive"] }
