[package]
name = "RustyCraft"
version = "0.1.0"
edition = "2018"

[dependencies]
reverie-engine = "0.0.5"
nalgebra = "0.29.0"
nalgebra-glm = "0.15.0"
parry3d = "0.7.0"
c_str_macro = "1.0.3"
nameof = "1.2"
image = "0.23.14"
specs = { version = "0.17.0", features = ["specs-derive"] }
glutin = "0.29.1"
